...
            android:gravity="center"
            android:layout_margin="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_below="@id/task"
            android:hint="Username"
            android:layout_margin="10dp"
            android:padding="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/username"
            android:hint="Password"
            android:layout_margin="10dp"
            android:padding="20dp"/>


...
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/signup"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign Up"
                android:gravity="center"
                />
...
